<resources>

    <!--Main activity-->
    <string name="app_name">e-PANJEEYAN</string>

    <string name="rev">Revenue &amp; Disaster Management</string>

    <string name="gov">Govt. of Assam</string>

    <string name="ins">Instant assessment &amp; deed registration fee</string>

    <string name="deed">Deed Registration</string>

    <string name="marr">Marriage Registration</string>

    <string name="view">View Appointment Status</string>

    <!--Deed registration-->

    <string name="appointform">Appointment\nForm</string>
    <string name="upload">Upload\nDocuments</string>
    <string name="confirm">Confirm\nSubmit</string>
    <string name="payment">Make\nPayment</string>


    <string name="appoint">Form for Taking an Appointment</string>
    <string name="uploadheading">Upload Documents</string>
    <string name="confirmheading">Confirm Submission</string>
    <string name="paymentheading">Make your Payment</string>

    <string name="name">\tApplicant Name *</string>

    <string name="email">\tEmail</string>

    <string name="num">\tMobile number *</string>

    <string name="add">\tAddress(House No/Street/Locality) *</string>

    <string name="post">\tPost Office *</string>

    <string name="city">\tCity/Town/Village *</string>

    <string name="dis">\tDistrict *</string>

    <string name="pin">\tPIN *</string>

    <string name="below"> ** Below information is necessary only in case of deeds related to land/flat (e.g sale or gift of land/flat etc.)</string>

    <string name="conAmt">\tConsideration Amount * </string>

    <string name="pur">\tPurchaser with </string>
    <string name="radio_both">Both Female &amp; Male Members</string>
    <string name="radio_only">Only Female Member/Members</string>
    <string name="radio_onlyM">Only Male Member/Members</string>

    <string name="land">\tLand/Flat is located in </string>
    <string name="urbanMCA">Urban(Municipality Corporation) Area</string>
    <string name="urbanMBA">Urban(Municipality Board) Area</string>
    <string name="rural">Rural Area</string>

    <string name="next">Next</string>

    <string name="address">Address Proof</string>
    <string name="age">Age Proof</string>
    <string name="identity">Identity Proof</string>

    <string name="iconfirm">Are you sure you want to submit?\n\n*Forms cannot be edited after the final submit is done.*\n</string>
    <string name="conSubmit">Confirm Submit</string>

    <string name="deptID">\tDepartment Tax ID *</string>
    <string name="payment_name">\tName *</string>
    <string name="pan">\tPAN</string>
    <string name="block">\tBlock No/Premises</string>
    <string name="locality">\tLocality/Road</string>
    <string name="area">\tArea/City</string>
    <string name="payment_pin">\tPIN</string>
    <string name="marr_reg_fee">\tRegistration Fee *</string>
    <string name="remarks">\tRemarks</string>

    <string name="success_msg">\nRegistration successful!!\nNo payment to be made for now.\nPlease report in the previous mentioned date and time for further processing.
    </string>

    <string name="pay">Pay</string>


    <!--Make Assessment-->
    <string name="assessment">Form for Assessment of Stamp Duty and Registration Fee</string>
    <string name="calculateFee">Calculate Fee</string>
    <string name="Rs" translatable="false">\u20B9</string>
    <string name="cons_amnt">Consideration Amount</string>
    <string name="stmp_duty">Stamp Duty Amount</string>
    <string name="reg_fee">Registration Fee</string>
    <string name="done">Done</string>

    <!--Check appointment-->
    <string name="check">Check your Appointment Status</string>
    <string name="reff">\tReference No. *</string>
    <string name="checkstatus">Check Status</string>

    <!--Marriage Registration-->
    <string name="marriage">Add Marriage Details</string>
    <string name="bride">Add Bride Details</string>
    <string name="groom">Add Groom Details</string>


    <string name="marriageDet">Marriage\nDetails</string>
    <string name="brideDet">Bride\nDetails</string>
    <string name="groomDet">Groom\nDetails</string>


    <string name="brideName">\tName of Bride * </string>
    <string name="ageMarr">\tAge * </string>
    <string name="occ">\tOccupation *</string>
    <string name="fname">\tFather\'s Name *</string>

    <string name="preAdd">Present Address</string>

    <string name="police">\tPolice Station *</string>
    <string name="district">\tDistrict *</string>
    <string name="state">\tState *</string>
    <string name="length">\tLength of residence (in years) *</string>
    <string name="perAdd">Permanent Address\n(If same as Present)</string>

    <string name="groomName">\tName of Groom *</string>

    <!--Settings Menu-->
    <string name="language">Language</string>
    <string name="mode">Night mode</string>
    <string name="about">About e-Panjeeyan</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>

    <!--My Profile-->
    <string name="myprofName">e-PANJEEYAN user</string>
    <string name="editpro">Edit Profile</string>
    <string name="uname">\tUsername</string>
    <string name="newpswd">\tNew Password</string>
    <string name="conpswd">\tConfirm Password</string>
    <string name="chngpswd">Change Password</string>
    <string name="phone">\tMobile number</string>


    <string name="select_doc">Select Image Document Type *</string>

    <string-array name="doc_type">
        <item>@string/address</item>
        <item>@string/age</item>
        <item>@string/identity</item>
    </string-array>

    <string name="marr_type">Select Marriage Type *</string>
    <string name="intended_marr" translatable="false">Intended Marriage</string>
    <string name="marriage_type" translatable="false">Marriage</string>

    <string-array name="marriageType">
        <item>@string/intended_marr</item>
        <item>@string/marriage_type</item>
    </string-array>

    <string name="marrStatus">Select Marital Status *</string>
    <string name="unmarried" translatable="false">Unmarried</string>
    <string name="widower" translatable="false">Widower</string>
    <string name="widow" translatable="false">Widow</string>
    <string name="divorcee" translatable="false">Divorcee</string>
    <string name="married" translatable="false">Married</string>

    <string-array name="maritalStatus">
        <item>@string/unmarried</item>
        <item>@string/widower</item>
        <item>@string/widow</item>
        <item>@string/divorcee</item>
        <item>@string/married</item>
    </string-array>

    <!--Spinners first select line-->
    <string name="apptypeSpinner">Select Applicant Type *</string>

    <string name="dateSpinner">Select Appointment Date *</string>

    <string name="sroSpinner">Select Office for Registration *</string>

    <string name="deedSpinner">Select Deed Category *</string>

    <string name="subdeedSpinner">Select Sub Deed Category *</string>


    <!--Spinner error message-->
    <string name="spinnerError">Please, select an option</string>

    <!--EditText error message-->
    <string name="editTextError">Please, enter a valid input</string>

    <string name="addressDocError">Address Proof not selected, Please select one!\n</string>
    <string name="ageDocError">Age Proof not selected, Please select one!\n</string>
    <string name="identityDocError">Identity Proof not selected, Please select one!</string>

    <string name="error_user_name">\tPlease, enter a valid username</string>
    <string name="error_email">\tPlease, enter a valid email address</string>
    <string name="error_phone">\tPlease, enter a valid phone number</string>
    <string name="pswderror">\tPlease, enter a valid password</string>
    <string name="error_pwds_not_match">\tBoth the passwords didn\'t match. Try again! </string>

    <!--Cookiebar error messages-->
    <string name="net_err">Network Error</string>
    <string name="err">Error</string>
    <string name="net_server_err">Please, check your network connection else the Server is not reachable at this moment.</string>
    <string name="unauthorized_access">Unauthorized access denied.</string>
    <string name="server_err">Server temporarily out of service.</string>


    <!--Toast messages-->
    <string name="uname_updated">Username updated!</string>
    <string name="mobilenum_updated">Mobile number updated!</string>
    <string name="email_updated">Email updated!</string>
    <string name="pswd_updated">Password updated!</string>


    <!--&lt;!&ndash;validation&ndash;&gt;-->
    <!--<string name="nameerror">Enter a valid Name</string>-->
    <!--<string name="emailerror">Enter a valid Email</string>-->
    <!--<string name="mobileerror">Enter a valid Mobile no.</string>-->
    <!--<string name="addresserror">Enter a valid Address</string>-->
    <!--<string name="cityerror">Enter a valid City/Town/Village</string>-->
    <!--<string name="poerror">Enter a valid Post Office</string>-->
    <!--<string name="districterror">Enter a valid District</string>-->
    <!--<string name="pinerror">Enter a 6-digit valid PIN</string>-->

    <!--<string name="ageerror">Enter age between 18-60</string>-->
    <!--<string name="occerror">Enter a valid  Occupation</string>-->
    <!--<string name="fNameerror">Enter a valid Father\'s Name</string>-->

    <!--<string name="ageGroomerr">Enter age between 21-60</string>-->

    <!--<string name="policeerror">Enter a valid Police Station</string>-->
    <!--<string name="stateerror">Enter a valid State</string>-->
    <!--<string name="lengtherror">Enter a valid Length of residence</string>-->

    <!--&lt;!&ndash;view_status &ndash;&gt;-->

    <!--<string name="refNumber">Enter a valid reference no.</string>-->


    <!--About page-->
    <string name="version">Version 1.0</string>
    <string name="developer">Designed &amp; developed by NIC, Assam</string>
    <string name="about_page_description">e-Panjeeyan is an Android Mobile Application of Revenue &amp; Disaster Management Department. It is a government\'s registration system for online deed registration and marriage registration. So basically, the registration process involves the preparation of the deeds by selecting its category, calculating the applicable stamp duty and registration fees for the deed and an appointment date is provided on successful registration. After payment of the fees, the Sub-Registrar Office (SRO) of the area will record the deed legally.
   </string>
    <string name="connect_us_label">Contact with us</string>
    <string name="epanjeeyan_web_address" translatable="false">http://revenueassam.nic.in/panjeeyanonline/index.jsp</string>
    <string name="title_about_epanjeeyan">About e-Panjeeyan</string>


    <!--Title of action bar-->
    <string name="title_profile_epanjeeyan">My Profile</string>
    <string name="title_check_fee">Fee assessment</string>

    <!--Warnings-->
    <string name="label_attention">Attention!</string>
    <string name="label_field_mandatory">Fields marked with \"*\" are mandatory</string>
    <string name="label_complete_all_stages">Complete all the stages first</string>

    <!--Successful appointment-->
    <string name="appointment_id_msg">Your appointment id is :</string>
    <string name="details1">You are requested to report 15 minutes before the mentioned date and time i.e., on</string>
    <string name="details2"> . </string>
    <string name="details3"> Under the </string>
    <string name="details4"> sub registrar office, a consideration amount of  </string>
    <string name="details5"> , </string>
    <string name="details6"> a registration fee </string>
    <string name="details7"> and a stamp duty of </string>
    <string name="details8"> is to be paid. </string>


    <!--Dialog box-->
    <string name="loading">Loading</string>
    <string name="error_no_internet" translatable="false">No internet connection. Try again…</string>


</resources>
