<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/myprofile_menu_item"
            android:icon="@drawable/ic_my_profile"
            android:orderInCategory="90"
            android:title="@string/title_profile_epanjeeyan"
            app:showAsAction="always" />

        <item
            android:id="@+id/language_menu_item"
            android:icon="@drawable/ic_language"
            android:orderInCategory="100"
            android:title="@string/language"
            app:showAsAction="never" />

        <item
            android:id="@+id/theme_menu_item"
            android:icon="@drawable/ic_night"
            android:title="@string/mode"
            app:actionLayout="@layout/layout_switch"
            android:orderInCategory="100"
            app:showAsAction="never" />


        <item
            android:id="@+id/about_menu_item"
            android:icon="@drawable/ic_info"
            android:orderInCategory="100"
            android:title="@string/about"
            app:showAsAction="never" />

        <item
            android:id="@+id/help_menu_item"
            android:icon="@drawable/ic_help"
            android:orderInCategory="100"
            android:title="@string/help"
            app:showAsAction="never" />

        <item
            android:id="@+id/logout_menu_item"
            android:icon="@drawable/ic_logout"
            android:orderInCategory="110"
            android:title="@string/logout"
            app:showAsAction="never" />


    </group>

</menu>