<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#4169E1">

        <TextView
            android:id="@+id/header_text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/assessment"
            android:textColor="#fff"
            android:textSize="18sp" />

    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/appoint_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:orientation="vertical"
                    android:paddingTop="8dp">


                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/deedCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:ms_alignLabels="true"
                        app:ms_arrowColor="@color/colorAccent"
                        app:ms_arrowSize="14dp"
                        app:ms_enableErrorLabel="true"
                        app:ms_floatingLabelColor="@color/colorAccent"
                        app:ms_hint="@string/deedSpinner" />

                    <fr.ganfra.materialspinner.MaterialSpinner
                        android:id="@+id/subdeedCategory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:ms_alignLabels="true"
                        app:ms_arrowColor="@color/colorAccent"
                        app:ms_arrowSize="14dp"
                        app:ms_enableErrorLabel="true"
                        app:ms_floatingLabelColor="@color/colorAccent"
                        app:ms_hint="@string/subdeedSpinner" />

                    <TextView
                        android:id="@+id/extraForSale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/below"
                        android:visibility="gone" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/considerationWrapper"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:errorEnabled="true">

                        <EditText
                            android:id="@+id/considerationAmt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"
                            android:drawableLeft="@drawable/ic_monetization"
                            android:hint="@string/conAmt"
                            android:inputType="number"
                            android:text="0"
                            android:textSize="16sp" />
                    </com.google.android.material.textfield.TextInputLayout>


                    <TextView
                        android:id="@+id/extraForSalePur"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edittext_border"
                        android:drawableLeft="@drawable/ic_wc"
                        android:text="@string/pur"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edittext_border"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <RadioButton
                            android:id="@+id/radio_both"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/radio_both"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/radio_onlyFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_only"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/radio_onlyMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/radio_onlyM"
                            android:textSize="15sp" />

                    </RadioGroup>

                    <TextView
                        android:id="@+id/landFlat"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edittext_border"
                        android:drawableLeft="@drawable/ic_gps"
                        android:text="@string/land"
                        android:textSize="16sp"
                        android:visibility="gone" />

                    <RadioGroup
                        android:id="@+id/radioGroup2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/edittext_border"
                        android:orientation="vertical"
                        android:visibility="gone">

                        <RadioButton
                            android:id="@+id/urbanMCA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/urbanMCA"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/urbanMBA"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/urbanMBA"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/rural"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rural"
                            android:textSize="15sp" />

                    </RadioGroup>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center|bottom"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/btnSubmit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:backgroundTint="#228B22"
                            android:onClick="submitIt"
                            android:text="@string/calculateFee"
                            android:textColor="#fff" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>