<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarThumbVertical="@null">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:layout_width="155dp"
                android:layout_height="155dp"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:elevation="10dp"
                app:cardCornerRadius="80dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="140dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="8dp"
                    android:paddingLeft="3dp"
                    android:paddingBottom="2dp"
                    app:srcCompat="@drawable/goa" />
            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/revText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/rev"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/govText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/gov"
                android:textSize="16sp" />

            <!--<GridLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="0dp"-->
            <!--android:layout_marginBottom="12dp"-->
            <!--android:layout_weight="8"-->
            <!--android:alignmentMode="alignMargins"-->
            <!--android:columnCount="2"-->
            <!--android:rowCount="2">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button"
                    android:layout_width="157dp"
                    android:layout_height="215dp"
                    android:layout_marginRight="10dp"
                    android:drawableTop="@drawable/money"
                    android:onClick="combineForm"
                    android:text="@string/ins"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/button2"
                    android:layout_width="157dp"
                    android:layout_height="215dp"
                    android:drawableTop="@drawable/addfriend"
                    android:onClick="doDeedRegister"
                    android:text="@string/deed"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="157dp"
                    android:layout_height="215dp"
                    android:layout_marginRight="10dp"
                    android:drawableTop="@drawable/weddingrings"
                    android:onClick="doMarriageRegistration"
                    android:text="@string/marr"
                    android:textSize="14sp" />


                <Button
                    android:id="@+id/button4"
                    android:layout_width="157dp"
                    android:layout_height="215dp"
                    android:drawableTop="@drawable/eyeyellow"
                    android:onClick="doViewStaus"
                    android:text="@string/view"
                    android:textSize="14sp" />


            </LinearLayout>

            <!--</GridLayout>-->

        </LinearLayout>


    </ScrollView>

</android.support.constraint.ConstraintLayout>